feat: 예외 처리